# tCrypt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tcrypt/: __init__.py  cli.py
src/tcryption/: __init__.py  cli.py  crypto.py
tests/: test_crypto.py
