[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcrypt"
version = "0.1.0"
description = "A friendly CLI for encrypting files and secret messages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "tCrypt Contributors" },
]
keywords = ["encryption", "decryption", "cli", "security", "files", "messages"]
dependencies = [
  "cryptography>=43.0.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]

[project.scripts]
tcrypt = "tcryption.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
